# Parallel-Work-Efficient-Dynamic-Programming

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  analysis.py  analyze_lcs.py  analyze_post_office.py  brute_force_dp.h  concave_dp_parallel.h  concave_dp_sequential.h  config.h.in  convex_dp.h  convex_dp_new.h  convex_dp_new2.h  convex_dp_parallel.h  convex_dp_sequential.h  convex_dp_try.h  dc3.h  dc3_test.cpp  debug.h  lcs.cpp  lcs_brute_force.h  lcs_new.h  lcs_parallel.h  post_office.cpp  run.py  run_lcs.py  run_post_office.py  sqrt.cpp  suffix_array_parallel.h  test.cpp  tmp.cpp  utils.h
tmp/: n_1e7_m_1e10.txt  n_1e7_m_1e7.txt  n_1e7_m_1e8.txt  n_1e7_m_1e9.txt  n_1e8_m_1e7.txt  n_1e8_m_1e8.txt  n_1e8_m_1e9.txt  n_1e9_m_1e7.txt  n_1e9_m_1e8.txt  n_1e9_m_1e9.txt
